cros: Update re-auth message UI

1) Update the UI to be the same with the web-ui implementation.

2) Add a button to lock_debug_view.cc|h for easy debugging.

Bug: 836336
Change-Id: I89143c7db149dea31bc6848de18e6ecc6386f98b
Reviewed-on: https://chromium-review.googlesource.com/1044746
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556174}
Former-commit-id: d61bda19d1f0883accf841e5f0e280fead3f48aa